config-root/namespaces/jx-production/jx-golang12/jx-golang12-jx-golang12-deploy.yaml
# Source: jx-golang12/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-golang12-jx-golang12
  labels:
    draft: draft-app
    chart: "jx-golang12-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-golang12'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx-golang12-jx-golang12
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-golang12-jx-golang12
    spec:
      serviceAccountName: jx-golang12-jx-golang12
      containers:
        - name: jx-golang12
          image: "10.107.117.228/cloudowski/jx-golang12:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
