config-root/namespaces/jx-production/jx-golang12/jx-golang12-ingress.yaml
# Source: jx-golang12/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jx-golang12'
  name: jx-golang12
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jx-golang12
                port:
                  number: 80
      host: jx-golang12-jx-production.192.168.71.55.nip.io
